<resources>
    <string name="app_name">Погодное приложение</string>
    <string name="sDegreesCelsius">℃</string>
    <string name="sProcent">%</string>
    <string name="sEnterCityName">Enter the name of the city</string>
    <string name="sWithoutPrecipitation">without precipitation</string>
    <string name="sWaitSnow">wait snow</string>
    <string name="sTitleCity">City</string>
    <string name="sTitleTemperature">Temperature</string>
    <string name="sTitlePrecipitation">Precipitation</string>
    <string name="sTitleHumidity">Humidity</string>
    <string name="sTemperature">Temperature</string>
    <string name="sWind">Wind speed</string>
    <string name="sAtmospherePressure">Atmosphere pressureе</string>
    <string name="sSpeedWind">Speed wind</string>
    <string name="sMetersPerSecond">m/s</string>
    <string name="sAtmospherePressureMeasure">mmHg.</string>
    <string name="sColonAndSpace">": "</string>
    <string name="sSpace">" "</string>
    <string name="sExCBWind">"2 "</string>
    <string name="sExSWAtmospherePressure">"751.3 "</string>
    <string name="sNoData">No data</string>

    <string name="sDrawableSunCloud" translatable="false">"geekbrains.ru.weatherapp:drawable/sun_cloud"</string>
    <string name="sDrawableNightSnow" translatable="false">"geekbrains.ru.weatherapp:drawable/night_snow"</string>

    <string name="recycler_activity" translatable="false">Recycler Activity</string>
    <string name="coordinator_activity" translatable="false">Coordinator Activity</string>
    <string name="sEmpty">Empty</string>
    <string name="sRemove">remove</string>
    <string name="sClear">clear</string>

    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">Header with avatar</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_about_developer" translatable="false">About developer</string>
    <string name="menu_callback" translatable="false">Callback</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="search" translatable="false">Search</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="action" translatable="false">Action</string>

    <string name="sStudentGBU">Student GBU</string>
    <string name="sTodo">TODO</string>

    <string name="sBtnBack">Back</string>
    <string name="sBackToCityList" translatable="false">Back to CityList</string>
    <string name="second_activity_2" translatable="false">Second Activity 2</string>
    <string name="change_city" translatable="false">Change City</string>
    <string name="targetURL1" translatable="false">http://api.openweathermap.org/data/2.5/weather?q=</string>
    <string name="targetURL2" translatable="false"><![CDATA[&units=metric&appid=]]></string>
    <string name="weather" translatable="false">weather</string>
    <string name="main" translatable="false">main</string>
    <string name="name" translatable="false">name</string>
    <string name="sys" translatable="false">sys</string>
    <string name="country" translatable="false">country</string>
    <string name="commaAndSpace" translatable="false">\, \</string>
    <string name="description" translatable="false">description</string>
    <string name="temp" translatable="false">temp</string>
    <string name="humidity" translatable="false">humidity</string>
    <string name="TitleHumidity" translatable="false">\Humidity: \</string>
    <string name="procent" translatable="false">%</string>
    <string name="sGradus" translatable="false">°</string>
    <string name="number" translatable="false">%.2f</string>
    <string name="TitlePressure" translatable="false">\Pressure: \</string>
    <string name="pressure" translatable="false">pressure</string>
    <string name="hPa" translatable="false">\ hPa\</string>
    <string name="dt" translatable="false">dt</string>
    <string name="is" translatable="false">id</string>
    <string name="sunrise" translatable="false">sunrise</string>
    <string name="sunset" translatable="false">sunset</string>
    <string name="KEY" translatable="false">cbfdb21fa1793c10b14b6b6d00fbef03</string>
    <string name="fonts" translatable="false">fonts/weathericons-regular-webfont.ttf</string>
    <string name="sTitleChangeCity" translatable="false">Change City</string>
    <string name="change" translatable="false">Change</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="noInternetConnection" translatable="false">No Internet Connection</string>
    <string name="errorCheckCity" translatable="false">Error, Check City</string>

    <string name="sEnterYourMessage">Enter your message</string>
    <string name="sEnterYourName">Enter your name</string>
    <string name="sSend">send</string>
    <string name="sGet">get</string>
</resources>
