<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/toRecyclerActivity"
            android:title="@string/recycler_activity"
            app:showAsAction="never" />

        <item
            android:id="@+id/toCoordinatorActivity"
            android:title="@string/coordinator_activity"
            app:showAsAction="never" />
    </group>

    <item android:title="Action">
        <menu>
            <item
                android:id="@+id/menu_search"
                android:icon="@android:drawable/ic_menu_search"
                android:orderInCategory="11"
                android:title="@string/search"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>